Also top bar on mobile version is now correct

--- a/develop/wordpress/wp-content/themes/mobile/style.css
+++ b/develop/wordpress/wp-content/themes/mobile/style.css
@@ -496,11 +496,12 @@ hr.light {
     }
 
     .row-hr-menu {
-        flex: 85%;
+        flex: 100%;
     }
     .row-hr-content {
         flex: 0%;
     }
+
 
     /* ---------------------------------------- sidebar */
 
